v136
(xx/11/16)

Changes / Improvements / Optimizations:
DietPi-Config | RPi: Onboard RPI soundcard will now be disabled when another addon card is selected (frees up some memory)
DietPi-Config | RPi: The known method of forcing audio output on RPi to HDMI or 3.5mm jack is no longer effective, and, has been removed from dietpi-config (amixer cset numid=3 [0-2]).
DietPi-JustBoom | Now supports JustBoom-digi soundcards.

Bug fixes:
DietPi-Config | Resolved an issue where setting JustBoom soundcard multiple times, results in multiple dtoverlay= entries: https://github.com/Fourdee/DietPi/issues/586
DietPi-JustBoom | Resolved an issue where disabling EQ and rebooting renders in no sound output: https://github.com/Fourdee/DietPi/issues/585
DietPi-JustBoom | The reset option will also reset ALSA EQ levels.

-----------------------------------------------------------------------------------------------------------

v135
(29/10/16)

New Device:
NanoPi M3/T3 DietPi image now available! Many thanks to AWL29 for creating the image and making this possible: http://dietpi.com/phpbb/viewtopic.php?f=8&t=784&p=3482#p3482

Changes / Improvements / Optimizations:
DietPi-Software | PiVPN: installation option added: PiVPN is a set of installation and configuration scrips that allows for OpenVPN installation and management, via a menu interface: https://github.com/Fourdee/DietPi/issues/570
DietPi-Software | NextCloud: Installation updated to 10.0.1, many thanks to @Bridouz: https://github.com/Fourdee/DietPi/pull/565
DietPi-Software | XU4 Cloudshell LCD Panel: Will automatically be enabled during DietPi-Cloudshell installation.
DietPi-Software | XU4: All 8 cores are now included in configuration stage. Previously we limited configurations to only use 4 CPU cores, due to heat issues with XU4. This will affect software installations such as webservers and should increase their overall performance.
DietPi-Software | Syncthing installation updated to 0.14.9.