@@ -66,4 +66,4 @@ mixer_type "software"
 
 #Realtime audio conversion & upscaling
 #audio_output_format "48000:16:2"
-#samplerate_converter "soxr"
+#samplerate_converter "soxr very high"
