@@ -3274,14 +3274,26 @@ _EOF_
 
 		local soundcard_current=$(cat /DietPi/dietpi.txt | grep -m1 'soundcard=' | sed 's/.*=//')
 
+		local whiptail_menu_array=()
+
+		whiptail_menu_array+=("Soundcard" ": $soundcard_current")
+
+		if (( $(dpkg --get-selections | grep -ci -m1 '^alsa-base') )); then
+
+			whiptail_menu_array+=("DietPi-JustBoom" ": Launches EQ and MPD audio options menu")
+
+		fi
+
 		WHIP_TITLE='DietPi - Audio Options'
-		OPTION=$(whiptail --title "$WHIP_TITLE" --menu "Choose an option" --cancel-button "$TEXT_MENU_BACK" 9 60 1 \
-		"1" "Soundcard         : $soundcard_current" 3>&1 1>&2 2>&3)
+		OPTION=$(whiptail --title "$WHIP_TITLE" --menu "Choose an option" --cancel-button "$TEXT_MENU_BACK" 10 65 2 "${whiptail_menu_array[@]}" 3>&1 1>&2 2>&3)
 
 		CHOICE=$?
+
+		unset whiptail_menu_array
+
 		if (( $CHOICE == 0 )); then
 
-			if (( $OPTION == 1 )); then
+			if [ "$OPTION" = "Soundcard" ]; then
 
 				WHIP_TITLE='DietPi - Soundcards'
 
@@ -3358,6 +3370,13 @@ _EOF_
 					Info_HW_OptionNotSupported
 
 				fi
+
+				#Return to This Menu
+				TARGETMENUID=14
+
+			elif [ "$OPTION" = "DietPi-JustBoom" ]; then
+
+				/DietPi/dietpi/misc/dietpi-justboom
 
 				#Return to This Menu
 				TARGETMENUID=14
