@@ -30,12 +30,17 @@
 	#TARGETMENUID=0
 	Menu_Main(){
 
-		local -a option_name=()
+		local option_name=()
 
 		option_name+=("" "────Install Optimized Software──────────────");((index++))
 		option_name+=("DietPi-Software" "Install optimized software thats ready to run.");((index++))
 		option_name+=("" "────Configuration───────────────────────────");((index++))
 		option_name+=("DietPi-Config" "Feature rich config tool for your device.");((index++))
+		if (( $(dpkg --get-selections | grep -ci -m1 '^alsa-base') )); then
+
+			option_name+=("DietPi-JustBoom" "Launches EQ and MPD audio options menu")
+
+		fi
 		option_name+=("DietPi-AutoStart" "Choose what software runs after boot.");((index++))
 		#+ add dietpi-cloudshell if installed.
 		# if (( ${DIETPICLOUDSHELL:=0} == 2 )); then
@@ -73,7 +78,23 @@
 				#convert to lowercase
 				local command=$(echo "${OPTION,,}")
 
-				/DietPi/dietpi/"$command"
+				#Run
+				if [ -f "/DietPi/dietpi/$command" ]; then
+
+					/DietPi/dietpi/"$command"
+
+				# - different location
+				elif [ -f "/DietPi/dietpi/misc/$command" ]; then
+
+					/DietPi/dietpi/misc/"$command"
+
+				# - different location
+				elif [ -f "/DietPi/dietpi/func/$command" ]; then
+
+					/DietPi/dietpi/func/"$command"
+
+				fi
+
 
 				#+ Wait for user input.
 				if [ "$command" = "dietpi-cpuinfo" ] ||
