@@ -2270,13 +2270,13 @@ _EOF_
 
 		local string="$@"
 
-		local force_yes='--force-yes'
+		local force_options='--force-yes'
 		#PHP7
 		# if (( $DISTRO == 4 )): then
-			# force_yes='--allow'
+			# force_options='--allow'
 		# fi
 
-		DEBIAN_FRONTEND=noninteractive apt-get install -y $force_yes $string
+		DEBIAN_FRONTEND=noninteractive apt-get install -y $force_options $string
 
 		local result=$?
 		if (( $result != 0 )); then
@@ -2868,10 +2868,15 @@ _EOF_
 			Banner_Installing
 
 			#YMPD
-			# - armv6+
-			if (( $HW_ARCH >= 1 && $HW_ARCH < 10 )); then
+			# - armv6
+			if (( $HW_ARCH == 1 )); then
 
-				INSTALL_URL_ADDRESS='http://dietpi.com/downloads/binaries/all/ympd-1.2.3-armv6.tar.bz2'
+				INSTALL_URL_ADDRESS='http://dietpi.com/downloads/binaries/all/ympd-1.3.0-armv6.tar.bz2'
+
+			# - armv7
+			elif (( $HW_ARCH >= 2 && $HW_ARCH < 10 )); then
+
+				INSTALL_URL_ADDRESS='http://dietpi.com/downloads/binaries/all/ympd-1.3.0-armv7.tar.bz2'
 
 			# - arm64
 			elif (( $HW_ARCH >= 10 && $HW_ARCH < 20 )); then
@@ -4768,8 +4773,14 @@ _EOF_
 			# - Apply
 			/DietPi/dietpi/func/dietpi-set_hardware soundcard "$soundcard"
 
-		fi
+			# - DietPi-JustBoom config panel Alias:
+			if (( ! $(cat /etc/bash.bashrc | grep -ci -m1 'dietpi-justboom=') )); then
 
+				sed -i "/#DietPi Additions/a alias dietpi-justboom='/DietPi/dietpi/misc/dietpi-justboom'" /etc/bash.bashrc
+
+			fi
+
+		fi
 
 		INSTALLING_INDEX=6
 		if (( ${aSOFTWARE_INSTALL_STATE[$INSTALLING_INDEX]} == 1 )); then
@@ -8741,6 +8752,10 @@ _EOF_
 		elif (( $1 == 5 )); then
 
 			AGP alsa-base alsa-utils
+
+			#DietPi-JustBoom, remove bash alias for config panel:
+			sed -i '/dietpi-justboom/d' /etc/bash.bashrc &> /dev/null
+
 
 		elif (( $1 == 6 )); then
 
