@@ -990,9 +990,6 @@ _EOF_
 		#Remove previous asound.conf
 		rm /etc/asound.conf &> /dev/null
 
-		#DietPi-JustBoom special, remove bash alias for config panel:
-		sed -i '/dietpi-justboom/d' /etc/bash.bashrc &> /dev/null
-
 		#HW specific
 		# - RPI
 		if (( $HW_MODEL < 10 )); then
@@ -1145,13 +1142,6 @@ _EOF_
 			#JustBoom-digi: Digi HAT and Digi Zero
 			justboom-*)
 
-				# - DietPi-JustBoom config panel Alias:
-				if (( ! $(cat /etc/bash.bashrc | grep -ci -m1 'dietpi-justboom=') )); then
-
-					sed -i "/#DietPi Additions/a alias dietpi-justboom='/DietPi/dietpi/misc/dietpi-justboom'" /etc/bash.bashrc
-
-				fi
-
 				# - enable dtoverlay
 				echo -e "dtoverlay=$INPUT_DEVICE_VALUE" >> /DietPi/config.txt
 
@@ -1171,6 +1161,8 @@ _EOF_
 				echo -e "snd-soc-odroid-dac" >> /etc/modules
 
 				SOUNDCARD_TARGET_CARD=1
+
+				#2 = snd-soc-pcm5242
 
 			;;
 
