@@ -20,14 +20,25 @@
 	#/////////////////////////////////////////////////////////////////////////////////////
 	#Globals
 	#/////////////////////////////////////////////////////////////////////////////////////
-	FP_MPD_CONF='/etc/mpd.conf'
+	EQ_ENABLED=0
+	SOUNDCARD_CURRENT=0
+
+	# - MPD
 	OUTPUT_FREQ_CURRENT=0
 	OUTPUT_FREQ_TARGET=0 #So we can search and replace previous value with new
 	OUTPUT_BITRATE_CURRENT=0
 	OUTPUT_BITRATE_TARGET=0 #So we can search and replace previous value with new
 	SOXR_ENABLED=0
 	SOXR_QUALITY=0
-	EQ_ENABLED=0
+
+	FP_MPD_CONF='/etc/mpd.conf'
+	MPD_INSTALLED=0
+
+	if [ -f "$FP_MPD_CONF" ]; then
+
+		MPD_INSTALLED=1
+
+	fi
 
 	Reset_Globals(){
 
@@ -44,8 +55,12 @@
 
 	Read_Globals(){
 
+		SOUNDCARD_CURRENT=$(cat /DietPi/dietpi.txt | grep -m1 'soundcard=' | sed 's/.*=//')
+
+		EQ_ENABLED=$(cat /etc/asound.conf | grep -ci -m1 '^pcm.plugequal')
+
 		#MPD specific
-		if [ -f "$FP_MPD_CONF" ]; then
+		if (( $MPD_INSTALLED )); then
 
 			OUTPUT_FREQ_CURRENT=$(cat $FP_MPD_CONF | grep -m1 '^format' | sed 's/\"//g' | sed 's/:/ /g' | awk '{print $2}')
 			OUTPUT_FREQ_TARGET=$OUTPUT_FREQ_CURRENT
@@ -56,26 +71,22 @@
 
 		fi
 
-		EQ_ENABLED=$(cat /etc/asound.conf | grep -ci -m1 '^pcm.plugequal')
-
 	}
 
 	Write_Apply_Globals(){
 
-		local soundcard_current=$(cat /DietPi/dietpi.txt | grep -m1 'soundcard=' | sed 's/.*=//')
-
 		if (( $EQ_ENABLED )); then
 
-			/DietPi/dietpi/func/dietpi-set_hardware soundcard "$soundcard_current"-eq
+			/DietPi/dietpi/func/dietpi-set_hardware soundcard "$SOUNDCARD_CURRENT"-eq
 
 		else
 
-			/DietPi/dietpi/func/dietpi-set_hardware soundcard "$soundcard_current"
+			/DietPi/dietpi/func/dietpi-set_hardware soundcard "$SOUNDCARD_CURRENT"
 
 		fi
 
 		#MPD specific
-		if [ -f "$FP_MPD_CONF" ]; then
+		if (( $MPD_INSTALLED )); then
 
 			# - Output freq
 			sed -i "s/\"$OUTPUT_FREQ_CURRENT/\"$OUTPUT_FREQ_TARGET/g"  "$FP_MPD_CONF"
@@ -162,7 +173,7 @@
 		fi
 
 		#MPD specific
-		if [ -f "$FP_MPD_CONF" ]; then
+		if (( $MPD_INSTALLED )); then
 
 			whiptail_menu_array+=("" "──── MPD Specific ────────────────────────────")
 			whiptail_menu_array+=("Output Frequency" ": $OUTPUT_FREQ_CURRENT Hz | Select to change")
@@ -228,7 +239,7 @@
 				whiptail_menu_array+=("low" ": Lowest quality, minimal CPU usage")
 
 				WHIP_QUESTION='Select a SOXR Quality level:'
-				OPTION=$(whiptail --title "$PROGRAM_NAME" --backtitle "$PROGRAM_NAME" --menu "$WHIP_QUESTION" --cancel-button "Exit" --default-item "$LAST_SELECTED_NAME" 11 70 3 "${whiptail_menu_array[@]}" 3>&1 1>&2 2>&3)
+				OPTION=$(whiptail --title "$PROGRAM_NAME" --backtitle "$PROGRAM_NAME" --menu "$WHIP_QUESTION" --cancel-button "Exit" --default-item "$SOXR_QUALITY" 11 70 3 "${whiptail_menu_array[@]}" 3>&1 1>&2 2>&3)
 				CHOICE=$?
 
 				unset whiptail_menu_array
@@ -252,7 +263,7 @@
 				whiptail_menu_array+=("44100" ": 44.1kHz (music standard)")
 
 				WHIP_QUESTION='Select an Output Frequency:'
-				OPTION=$(whiptail --title "$PROGRAM_NAME" --backtitle "$PROGRAM_NAME" --menu "$WHIP_QUESTION" --cancel-button "Exit" --default-item "$LAST_SELECTED_NAME" 14 70 6 "${whiptail_menu_array[@]}" 3>&1 1>&2 2>&3)
+				OPTION=$(whiptail --title "$PROGRAM_NAME" --backtitle "$PROGRAM_NAME" --menu "$WHIP_QUESTION" --cancel-button "Exit" --default-item "$OUTPUT_FREQ_CURRENT" 14 70 6 "${whiptail_menu_array[@]}" 3>&1 1>&2 2>&3)
 				CHOICE=$?
 
 				unset whiptail_menu_array
@@ -273,7 +284,7 @@
 				whiptail_menu_array+=("16" ": (CD audio quality)")
 
 				WHIP_QUESTION='Select an Output BitRate:'
-				OPTION=$(whiptail --title "$PROGRAM_NAME" --backtitle "$PROGRAM_NAME" --menu "$WHIP_QUESTION" --cancel-button "Exit" --default-item "$LAST_SELECTED_NAME" 11 70 3 "${whiptail_menu_array[@]}" 3>&1 1>&2 2>&3)
+				OPTION=$(whiptail --title "$PROGRAM_NAME" --backtitle "$PROGRAM_NAME" --menu "$WHIP_QUESTION" --cancel-button "Exit" --default-item "$OUTPUT_BITRATE_CURRENT" 11 70 3 "${whiptail_menu_array[@]}" 3>&1 1>&2 2>&3)
 				CHOICE=$?
 
 				unset whiptail_menu_array
