@@ -1782,7 +1782,7 @@ _EOF_
 	elif (( $VERSION_CURRENT == 135 )); then
 		#-------------------------------------------------------------------------------
 		#Soundcard fixes & changes, requires a reapply to overwrite and patch existing settings.
-		#	JustBoom, pattern mach as end of string may contain '-noeq' due to: https://github.com/Fourdee/DietPi/issues/585
+		#	JustBoom, pattern match as end of string may contain '-noeq' due to: https://github.com/Fourdee/DietPi/issues/585
 		if (( $(cat /DietPi/dietpi.txt | grep -ci -m1 '^soundcard=justboom-dac') )); then
 
 			/DietPi/dietpi/func/dietpi-set_hardware soundcard justboom-dac-eq
@@ -1798,7 +1798,17 @@ _EOF_
 
 		fi
 
-		#Test this patch with JustBoom image using testing branch!
+		#Reinstall ALSA to enable bash alias for dietpi-justboom on all soundcards.
+		/DietPi/dietpi/dietpi-software reinstall 5
+
+		#-------------------------------------------------------------------------------
+		#Force use of existing installed configs if available, else install new. Also disables end user prompt from dpkg
+		cat << _EOF_ > /etc/apt/apt.conf.d/local
+Dpkg::Options {
+   "--force-confdef";
+   "--force-confold";
+}
+_EOF_
 		#-------------------------------------------------------------------------------
 
 	fi
