@@ -2,11 +2,13 @@ v136
 (xx/11/16)
 
 Changes / Improvements / Optimizations:
+DietPi-Software | YMPD: installation updated to 1.3.0
 DietPi-Config | RPi: Onboard RPI soundcard will now be disabled when another addon card is selected (frees up some memory)
 DietPi-Config | RPi: The known method of forcing audio output on RPi to HDMI or 3.5mm jack is no longer effective, and, has been removed from dietpi-config (amixer cset numid=3 [0-2]).
-DietPi-JustBoom | Now supports JustBoom-digi soundcards.
+DietPi-JustBoom | Can now be used with any soundcard, and, is now available when ALSA is installed from dietpi-software, and from dietpi-config audio options.
 
 Bug fixes:
+DietPi-Software | Will no longer prompt the user, when dpkg requests to overwrite a configuration file, the existing conf will be used by default.
 DietPi-Config | Resolved an issue where setting JustBoom soundcard multiple times, results in multiple dtoverlay= entries: https://github.com/Fourdee/DietPi/issues/586
 DietPi-JustBoom | Resolved an issue where disabling EQ and rebooting renders in no sound output: https://github.com/Fourdee/DietPi/issues/585
 DietPi-JustBoom | The reset option will also reset ALSA EQ levels.
